[Win][HighDPI] Repaint glitches when scrolling. https://bugs.webkit.org/show_bug.cgi?id=173152 <rdar://problem/45269953>

Reviewed by Brent Fulgham.

Non-integral device scale factors are causing repaint glitches, because the computation of the scroll
delta in pixel coordinates from the scroll delta in logical coordinates will not always be correct.
Instead of blitting the scroll rectangle, repaint the entire region affected by scrolling.

* WebView.cpp:
(WebView::scrollBackingStore):


Canonical link: https://commits.webkit.org/208059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240131 268f45cc-cd09-0410-ab3c-d52691b4dbfc